bat.bool1.sleepin.SleepIn.scala.error
Compilation error:
SleepIn:5: error: ';' expected but 'return' found.
  } return false
    ^